@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19900418
+MANIFEST for ded, version t19900423
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
